--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,15 @@ before_install:
 
 script:
         - docker run -e CI=true str406/docker_learning npm run test
+
+deploy:
+        provider: elasticbeanstalk
+        region: "eu-central-1"
+        app: "docker_lerning"
+        env: "DockerLerning-env"
+        bucket_name: "elasticbeanstalk-eu-central-1-808319772349"
+        bucket_path: "docker_lerning"
+        on:
+                branch: master
+        access_key_id: $AWS_ACCESS_KEY
+        secret_access_key: $AWS_SECRET_KEY
